--- a/ddd-cargo-example/src/main/resources/application.properties
+++ b/ddd-cargo-example/src/main/resources/application.properties
@@ -2,9 +2,11 @@ server.port=8077
 
 spring.devtools.restart.enabled=false
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ddd-sayi-db?useUnicode=true&characterEncoding=UTF-8
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC-3
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ddd_cargo?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=utfpr
 
 
 
@@ -18,6 +20,3 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 
 #spring.redis.host=
 #spring.redis.port=
-
-
-
